GNOME Bugzilla – Bug 676843
Fix various memory leaks
Last modified: 2012-05-25 20:50:54 UTC
See patch.
Created attachment 215004 [details] [review] Fix various memory leaks Found with make valgrind-check. We should run it more often.
Review of attachment 215004 [details] [review]: We leak in some error paths still, but let's just go with this, better to incrementally improve rather than trying to fix everything at once.
Attachment 215004 [details] pushed as 48c9795 - Fix various memory leaks