Fix various memory leaks

Found with make valgrind-check. We should run it more often.

https://bugzilla.gnome.org/show_bug.cgi?id=676843